<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckg2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/edit_judul"
                android:autofillHints=""
                android:textColor="@color/text_color"
                android:padding="13dp"
                android:background="@color/background_color"
                android:textColorHint="@android:color/black"
                android:layout_marginHorizontal="15dp" />

            <EditText
                android:id="@+id/editTextAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/edit_pengarang"
                android:autofillHints=""
                android:textColor="@color/text_color"
                android:padding="13dp"
                android:background="@color/background_color"
                android:textColorHint="@android:color/black"
                android:layout_marginHorizontal="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/card_background_color">

                <!-- Menghapus LinearLayout dan ScrollView -->
                <EditText
                    android:id="@+id/editTextWords"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:gravity="top|start"
                    android:hint="@string/edit_cerita"
                    android:minHeight="500dp"
                    android:padding="15dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/text_color"
                    android:textColorHint="@android:color/black"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
